--- a/为什么浮点数运算不精确.md
+++ b/为什么浮点数运算不精确.md
@@ -12,9 +12,36 @@ class Main{
 ```
 输出结果是什么？
 
-![浮点数计算1](picture\float1.png)
+![浮点数计算1](/picture/float1.png)
 
 原因：0.125f和0.125d不存在精度损失。
+
+``` C
+#include <studio.h>
+#define EPSILON 0.0001   // Define your own tolerance
+#define FLOAT_EQ(x,v) (((v - EPSILON) < x) && (x <( v + EPSILON)))
+
+int main() {
+   float a, b, c;
+
+   a = 1.345f;
+   b = 1.123f;
+   c = a + b;
+   // if (FLOAT_EQ(c, 2.468)) // Remove comment for correct result
+   if (c == 2.468)            // Comment this line for correct result
+      printf_s("They are equal.\n");
+   else
+      printf_s("They are not equal! The value of c is %13.10f "
+                "or %f",c,c);
+}
+```
+输出结果是什么？
+
+OUTPUT:
+``` C
+They are not equal! The value of c is  2.4679999352 or 2.468000
+```
+原因： 使用的数字之间存在类型不匹配（例如，混合浮点数和双精度数）。
 
 ### 2. double计算一定准确吗？
 ``` java
@@ -30,9 +57,9 @@ class Main{
 ```
 c-d与d-e的结果相等吗？
 
-![浮点数计算2](picture\float2.png)
+![浮点数计算2](/picture/float2.png)
 
-原因：浮点数无法精确表示，存在精度损失。
+原因：浮点数无法精确表示，存在精度损失。十进制数的二进制表示可能不准确。
 
 ### 3. 除0会抛出异常吗？
 ``` java
@@ -45,7 +72,7 @@ class Main{
 ```
 程序会抛出异常吗？
 
-![浮点数计算3](picture\float3.png)
+![浮点数计算3](/picture/float3.png)
 
 原因：float、double数据类型支持无穷大。
 
@@ -59,7 +86,7 @@ class Main{
 ```
 程序会抛出异常吗？
 
-![浮点数计算4](picture\float4.png)
+![浮点数计算4](/picture/float4.png)
 
 原因：double源码定义
 ``` java
@@ -82,7 +109,7 @@ public static final double NaN = 0.0d / 0.0;
 
 * 结果显示是`0.30000000000000004`
 
-* ![Chrome console结果](picture/chrome_float_cal.png)
+* ![Chrome console结果](/picture/chrome_float_cal.png)
 
 ### $IEEE754$
 
@@ -150,3 +177,14 @@ $$(-1)^{sign}×(1+fraction)×2^{exponent - 127}$$
 * 例如，1.0（十进制）编码为$00111111100000000000000000000000$
     + 即$$0(sign)01111111(exponent)00000000000000000000000(fraction)$$
 通过转换公式计算二进制数，得到结果$$1.000000000000000000000000(binary) × 2^{0}$$
+    + 可以添加或减去的最小数字是$$0.00000000000000000000001(binary) = 0.00000011920928955078(decimal)$$
+    + 如果添加/减去小于$0.00000011920928955078(decimal)$的数字，结果不会改变。这是使用单精度浮点数时1.0的精度。
+
+* 例如，$1000000.0(decimal)$。它被编码为$$01001001011101000010010000000000$$
+    + 即$$0(sign)10010010(exponent)11101000010010000000000(fraction)$$
+    + 其二进制数为$$1.11101000010010000000000(binary)×2^{19}$$， 即$$11110100001001000000.0000(binary)$$
+    + 可以加减的最小数字是$0.0001(binary)=0.0625(decimal)$
+    + 在这种情况下，与$1.0$相比，精度要低很多。
+
+
+    
