完成《为什么浮点数运算不精确？》初稿

--- a/为什么浮点数运算不精确.md
+++ b/为什么浮点数运算不精确.md
@@ -1,6 +1,6 @@
 ## 一些关于浮点运算的示例
 
-### 1. 单精度与双精度的计算
+### 1. 单精度与双精度的计算[<sup>1</sup>](#refer-anchor-1)
 ```  java
 class Main{
     public static void main (String[ ] args){
@@ -35,7 +35,7 @@ int main() {
                 "or %f",c,c);
 }
 ```
-输出结果是什么？
+输出结果是什么？[<sup>2</sup>](#refer-anchor-2)
 
 OUTPUT:
 ``` C
@@ -111,7 +111,7 @@ public static final double NaN = 0.0d / 0.0;
 
 * ![Chrome console结果](/picture/chrome_float_cal.png)
 
-### $IEEE754$
+### $IEEE754$[<sup>4</sup>](#refer-anchor-4)
 
 #### 浮点数的一般格式
 `IEEE754`浮点标准指定浮点的二进制表示格式如下，
@@ -122,7 +122,7 @@ public static final double NaN = 0.0d / 0.0;
 * 从编码通过以下公式计算表示数值。
 $$(-1)^{sign}×(1+fraction)×2^{exponent - 127}$$
 
-#### 常用格式
+#### 常用格式[<sup>1</sup>](#refer-anchor-1)
 `IEEE754`规定了四种表示浮点数值的方式：单精确度（32位）、双精确度（64位）、延伸单精确度（43比特以上，很少使用）与延伸双精确度（79比特以上，通常以80位实现）。其中最常用的就是32位单精度浮点数和64位双精度浮点数。
 
 单精度浮点数在计算机存储器中占用4个字节（32 bits）
@@ -160,7 +160,7 @@ $$(-1)^{sign}×(1+fraction)×2^{exponent - 127}$$
     + 特点：NaN是无序的，比较操作符在任一操作数为NaN是为false，!=在任一操作数为NaN时为true，这意味着NaN != NaN.
 
 
-### 计算机表示实数的步骤
+### 计算机表示实数的步骤[<sup>5</sup>](#refer-anchor-5)
 
 * 将实数转化为二进制格式
     + 这个步骤可能损失精度，换句话说，有些数会损失精度，而有些数不会，**这取决于表示这个数所需要的信息量和浮点数的存储格式**
@@ -172,19 +172,127 @@ $$(-1)^{sign}×(1+fraction)×2^{exponent - 127}$$
 
 ## 为什么浮点数计算不准确？
 
-### 浮点数的精度有限
+### 浮点数的精度有限，而十进制转二进制表示不一定准确 [<sup>2</sup>](#refer-anchor-2)
 
-* 例如，1.0（十进制）编码为$00111111100000000000000000000000$
+* 例如[<sup>3</sup>](#refer-anchor-3)，1.0（十进制）编码为$00111111100000000000000000000000$
     + 即$$0(sign)01111111(exponent)00000000000000000000000(fraction)$$
 通过转换公式计算二进制数，得到结果$$1.000000000000000000000000(binary) × 2^{0}$$
     + 可以添加或减去的最小数字是$$0.00000000000000000000001(binary) = 0.00000011920928955078(decimal)$$
     + 如果添加/减去小于$0.00000011920928955078(decimal)$的数字，结果不会改变。这是使用单精度浮点数时1.0的精度。
 
-* 例如，$1000000.0(decimal)$。它被编码为$$01001001011101000010010000000000$$
+* 例如[<sup>3</sup>](#refer-anchor-3)，$1000000.0(decimal)$。它被编码为$$01001001011101000010010000000000$$
     + 即$$0(sign)10010010(exponent)11101000010010000000000(fraction)$$
     + 其二进制数为$$1.11101000010010000000000(binary)×2^{19}$$， 即$$11110100001001000000.0000(binary)$$
     + 可以加减的最小数字是$0.0001(binary)=0.0625(decimal)$
     + 在这种情况下，与$1.0$相比，精度要低很多。
 
+### 浮点数的精度有限，数学运算的规则和性质并不直接适用于浮点运算。
+* 例如，下表显示单个精度值A、B和C，以及使用不同的结合律计算它们的和的数学精确值。
+*  &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; $A = 2^1 × 1.00000000000000000000001$
 
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; $B = 2^0 × 1.00000000000000000000001$
+
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; $C = 2^3 × 1.00000000000000000000001$
+
+    $(A+B)+C =  2^3 × 1.01100000000000000000001011$
+
+    $A+(B+C) = 2^3 × 1.01100000000000000000001011$
+
+    数学上，结合律是成立的。
+
+    设$rn(x)$表示$x$上的一个舍入步骤。
+
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &ensp;$A+B =  2^1 × 1.1000000000000000000000110000...$
     
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;$rn(A+B) = 2^1 × 1.10000000000000000000010$
+
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; &ensp;$B+C =  2^3 × 1.0010000000000000000000100100...$
+
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;$rn(B+C) = 2^1 × 1.00100000000000000000001$
+
+    &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;$A+B+C = 2^3 ×1.0110000000000000000000101100...$
+
+    $rn(rn(A+B)+C) = 2^3 × 1.01100000000000000000010$
+    
+    $rn(A+rn(B+C)) = 2^3 × 1.01100000000000000000001$
+
+    + `IEEE754`计算的结果不仅与精确的数学结果不一样，而且$rn(rn(A+B)+C)$和$rn(rn(A+B)+C)$更接近正确的数学结果
+
+## 浮点数计算真的不准确吗？
+
+### `strict IEEE 754 vs fast math mode`
+* 编译器可以选择`strict IEEE 754 mode`或`fast mode`中一种模式来进行浮点数计算
+* **`strict IEEE 754`使得浮点计算变得可预测并且尽可能精确。** 严格的IEEE754语义不允许使用可能影响结果精度的代数变换的近似指令和优化。目标是使计算精确和可预测。理想情况下，如果启用了 IEEE 754 严格语义标志，则使用不同编译器编译的同一程序应该产生相同的结果[<sup>6</sup>](#refer-anchor-6)。
+    + 因此编译器在IEEE754语义下处理浮点数时，在进行优化时必须小心，因为旨在提高速度的微小更改可能会导致程序输出不同的结果。
+
+* **`fast math mode`**[<sup>7</sup>](#refer-anchor-7)。大多数时候，由于编译优化导致的结果差异很小。正因为如此，几乎所有编译器可以启用`fast math mode`，这样可以产生更快的代码，但不保证结果的精度。
+    + `fast math mode`可以**显著提升性能**，例如在游戏中，玩家不会在乎npc皮肤的颜色上的红色分量是否产生了偏离，但是玩家可能会非常在乎游戏的帧率。
+    + 但是，往往在科学领域，由于精度损失和舍入误差导致的微小差异会随着时间的推移而累积，并可能导致不正确的结果。这些程序通常会在非`fast math mode`下进行编译。
+    + `fast math mode`下，编译器可以做三类优化。
+        - 由算术规则引起的优化，（例如`(-a)* (-b)=a * b`:
+        - 使用近似指令引起的优化，例如`a / b = a * (1 / b), (1 / b)`使用近似倒数除法指令计算表达式，这比常规除法快得多；
+        - 与浮点错误管理相关的优化。这为优化为其他优化打开了大门，如公共子表达式消除、循环不变代码运动、矢量化等。
+
+### 怎么提高浮点计算的准确性呢？
+
+* 浮点融合乘加[<sup>8</sup>](#refer-anchor-8)（Fused Multiple-Add）：即浮点乘法加法运算，在一步执行完毕，采用单次舍入。例如$a + b × c$，未融合乘加将计算酸乘积$b × c$，将其舍入到$N$有效位，将结果加到a，然后舍入到$N$个有效位置；融合乘加将计算整个表达式$a + (b × c)$在将最终结果向下舍入到$N$个有效位之前达到其全精度。在2008年，IEEE754更新加入了FMA操作。
+    
+    +快速$FMA$可以加快许多涉及乘积累积的计算，并提高计算准确性。
+        + 点积
+        + 矩阵乘法
+        + 多项式评估
+        + 牛顿计算函数的方法
+        + 卷积和人工神经网络
+
+    + 浮点融合乘加部件[<sup>9</sup>](#refer-anchor-9)
+        + 浮点乘加部件的延时不会大于顺序执行浮点乘和浮点加的总延时；
+        + 浮点乘加部件的实现不会大幅度增加浮点加法的延时；
+        + 浮点乘加部件的硬件开销不会太大。
+    + ![乘加合并的示意框图](/picture/%E4%B9%98%E5%8A%A0%E5%90%88%E5%B9%B6%E7%9A%84%E7%A4%BA%E6%84%8F%E6%A1%86%E5%9B%BE.png)
+
+    + ![浮点FMA的总体架构](/picture/%E6%B5%AE%E7%82%B9FMA%E7%9A%84%E6%80%BB%E4%BD%93%E6%9E%B6%E6%9E%84.png)
+    
+
+* 其他替代$IEEE754$的方式：Posit [<sup>10</sup>](#refer-anchor-10)
+
+
+## Reference
+<div id="refer-anchor-1"></div>
+
+- [1] [「计算机原理」| 为什么浮点数运算不精确？（阿里笔试）](https://www.jianshu.com/p/2adb8fe74987)
+
+<div id="refer-anchor-2"></div>
+
+- [2] [Why Floating-Point Numbers May Lose Precision](https://learn.microsoft.com/en-us/cpp/build/why-floating-point-numbers-may-lose-precision?view=msvc-170)
+
+<div id="refer-anchor-3"></div>
+
+- [3] [Why Floating-Point Numbers are not Always Accurate](https://levelup.gitconnected.com/why-floating-point-numbers-are-not-always-accurate-9a57e812ace1)
+
+<div id="refer-anchor-4"></div>
+
+- [4] [IEEE 754](https://en.wikipedia.org/wiki/IEEE_754)
+
+<div id="refer-anchor-5"></div>
+
+- [5] [Why are floating point numbers inaccurate?](https://www.baeldung.com/cs/floating-point-numbers-inaccuracy)
+
+<div id="refer-anchor-6"></div>
+
+- [6] [Consistency of Floating-Point Results using the Intel® Compiler](https://www.intel.com/content/www/us/en/developer/articles/technical/consistency-of-floating-point-results-using-the-intel-compiler.html)
+
+<div id="refer-anchor-7"></div>
+
+- [7] [Semantics of Floating Point Math in GCC](https://gcc.gnu.org/wiki/FloatingPointMath)
+
+<div id="refer-anchor-8"></div>
+
+- [8] [Multiply–accumulate operation](https://en.wikipedia.org/wiki/Multiply-accumulate_operation)
+
+<div id="refer-anchor-9"></div>
+
+- [9] [谢启华](高性能微处理器中浮点融合乘加部件的设计与实现[D].国防科学技术大学,2013)
+
+<div id="refer-anchor-10"></div>
+
+- [10] [Posit: A Potential Replacement for IEEE 754](https://www.sigarch.org/posit-a-potential-replacement-for-ieee-754/)
