更改引用图片链接为github图床链接

--- a/为什么浮点数运算不精确.md
+++ b/为什么浮点数运算不精确.md
@@ -12,7 +12,7 @@ class Main{
 ```
 输出结果是什么？
 
-![浮点数计算1](/picture/float1.png)
+![浮点数计算1](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/float1.png?raw=true)
 
 原因：0.125f和0.125d不存在精度损失。
 
@@ -57,7 +57,7 @@ class Main{
 ```
 c-d与d-e的结果相等吗？
 
-![浮点数计算2](/picture/float2.png)
+![浮点数计算2](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/float2.png?raw=true)
 
 原因：浮点数无法精确表示，存在精度损失。十进制数的二进制表示可能不准确。
 
@@ -72,7 +72,7 @@ class Main{
 ```
 程序会抛出异常吗？
 
-![浮点数计算3](/picture/float3.png)
+![浮点数计算3](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/float3.png?raw=true)
 
 原因：float、double数据类型支持无穷大。
 
@@ -86,7 +86,7 @@ class Main{
 ```
 程序会抛出异常吗？
 
-![浮点数计算4](/picture/float4.png)
+![浮点数计算4](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/float4.png?raw=true)
 
 原因：double源码定义
 ``` java
@@ -109,13 +109,13 @@ public static final double NaN = 0.0d / 0.0;
 
 * 结果显示是`0.30000000000000004`
 
-* ![Chrome console结果](/picture/chrome_float_cal.png)
+* ![Chrome console结果](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/chrome_float_cal.png?raw=true)
 
 ### $IEEE754$[<sup>4</sup>](#refer-anchor-4)
 
 #### 浮点数的一般格式
 `IEEE754`浮点标准指定浮点的二进制表示格式如下，
-![32位浮点](/picture/Float_example.png)
+![32位浮点](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/Float_example.png?raw=true)
 * 浮点：浮点数的符号（1bit），0表示正，1表示负。
 * 指数：以2为基数（8bit）置于指数字段中的值。
 * 分数：一般在0到1之间的值，放在分数字段（23bit）中。
@@ -235,7 +235,7 @@ $$(-1)^{sign}×(1+fraction)×2^{exponent - 127}$$
 
 ### 怎么提高浮点计算的准确性呢？
 
-* 浮点融合乘加[<sup>8</sup>](#refer-anchor-8)（Fused Multiple-Add）：即浮点乘法加法运算，在一步执行完毕，采用单次舍入。例如$a + b × c$，未融合乘加将计算酸乘积$b × c$，将其舍入到$N$有效位，将结果加到a，然后舍入到$N$个有效位置；融合乘加将计算整个表达式$a + (b × c)$在将最终结果向下舍入到$N$个有效位之前达到其全精度。在2008年，IEEE754更新加入了FMA操作。
+* 浮点融合乘加[<sup>8</sup>](#refer-anchor-8)（Fused Multiple-Add）：即浮点乘法加法运算，在一步执行完毕，采用单次舍入。例如$a + b × c$，未融合乘加将计算乘积$b × c$，将其舍入到$N$有效位，将结果加到a，然后舍入到$N$个有效位置；融合乘加将计算整个表达式$a + (b × c)$在将最终结果向下舍入到$N$个有效位之前达到其全精度。在2008年，IEEE754更新加入了FMA操作。
     
     +快速$FMA$可以加快许多涉及乘积累积的计算，并提高计算准确性。
         + 点积
@@ -248,9 +248,9 @@ $$(-1)^{sign}×(1+fraction)×2^{exponent - 127}$$
         + 浮点乘加部件的延时不会大于顺序执行浮点乘和浮点加的总延时；
         + 浮点乘加部件的实现不会大幅度增加浮点加法的延时；
         + 浮点乘加部件的硬件开销不会太大。
-    + ![乘加合并的示意框图](/picture/%E4%B9%98%E5%8A%A0%E5%90%88%E5%B9%B6%E7%9A%84%E7%A4%BA%E6%84%8F%E6%A1%86%E5%9B%BE.png)
+    + ![乘加合并的示意框图](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/%E4%B9%98%E5%8A%A0%E5%90%88%E5%B9%B6%E7%9A%84%E7%A4%BA%E6%84%8F%E6%A1%86%E5%9B%BE.png?raw=true)
 
-    + ![浮点FMA的总体架构](/picture/%E6%B5%AE%E7%82%B9FMA%E7%9A%84%E6%80%BB%E4%BD%93%E6%9E%B6%E6%9E%84.png)
+    + ![浮点FMA的总体架构](https://github.com/npukujui11/SomeQuestionsAboutComputer/blob/main/picture/%E6%B5%AE%E7%82%B9FMA%E7%9A%84%E6%80%BB%E4%BD%93%E6%9E%B6%E6%9E%84.png?raw=true)
     
 
 * 其他替代$IEEE754$的方式：Posit [<sup>10</sup>](#refer-anchor-10)
