修改，第二版

--- a/本科生论文题目设计/本科生论文题目设计.md
+++ b/本科生论文题目设计/本科生论文题目设计.md
@@ -6,7 +6,7 @@
 ### 简要背景介绍
 * 互联网时代，多媒体点播网站，这些网站的流量是通过内容分发网络(CDN)分发给用户。内容分发网络是建立并覆盖在承载网之上，由分布在不同区域的边缘节点服务器群组成的分布式网络，CDN网络应用广泛，支持多种行业，多种场景内容加速，例如：图片小文件、大文件下载、视音频点播、直播流媒体、全栈加速、安全加速。综上，解决与CDN管理相关的问题对其实际应用至关重要。CDN运营商通常会收集每个网站的各种KPI，如流量、延迟、命中率等，并对这些多变量KPI进行异常检测，以支持CDN运营商做出正确的网络维护决策。目前KPI异常检测指的是通过算法分析KPI的时间序列数据，判断其是否出现异常行为。
 
-* 多变量时间序列异常检测是数据挖掘领域中一个相当活跃的话题，广泛应用于各行各业，如有医疗保健、航空航天、工业生产和互联网ISP领域中。
+* 多变量时间序列异常检测是数据挖掘领域中一个相当活跃的话题，广泛应用于各行各业，如有医疗保健、航空航天、工业生产和互联网ISP领域中。目前基于深度学习的多变量时间序列异常检测算法存在明显缺陷[<sup>[30]</sup>](#refer-anchor-30)。
 
 ----
 
