修改一些语法错误

--- a/本科生论文题目设计/本科生论文题目设计.md
+++ b/本科生论文题目设计/本科生论文题目设计.md
@@ -21,18 +21,18 @@
 
 ### 基本要求
 * 学生可在下列两个方向中选择
-    + 目前常见的异常检测方法通过深度学习方法来实现，主要考虑异常或异常值的行为与正常数据不同，基于此考虑无监督学习方法[<sup>[1]</sup>](#refer-anchor-1)[<sup>[2]</sup>](#refer-anchor-2)[<sup>[3]</sup>](#refer-anchor-3)[<sup>[4]</sup>](#refer-anchor-4)[<sup>[12]</sup>](#refer-anchor-12)[<sup>[13]</sup>](#refer-anchor-13)[<sup>[14]</sup>](#refer-anchor-14)[<sup>[15]</sup>](#refer-anchor-15)[<sup>[18]</sup>](#refer-anchor-18)[<sup>[19]</sup>](#refer-anchor-19)[<sup>[20]</sup>](#refer-anchor-20)[<sup>[21]</sup>](#refer-anchor-21)[<sup>[22]</sup>](#refer-anchor-22)[<sup>[23]</sup>](#refer-anchor-23)[<sup>[24]</sup>](#refer-anchor-24)。其中包括基于距离的方法、基于聚类的方法、基于相似性的方法和基于分类的方法，这些方法存在局限性，因其未能考虑时间序列的时间依赖性[<sup>[27]</sup>](#refer-anchor-27)。学生须较为深入的分析前人的深度学习方法[<sup>[17]</sup>](#refer-anchor-17)[<sup>[25]</sup>](#refer-anchor-25)，在前人的基础上有所改进，提出一种加以改进的深度学习模型，对CDN KPI的时间序列数据进行表征和预处理[<sup>[26]</sup>](#refer-anchor-26)，提取特征和构建模型。并尝试解决下列问题：
-        - 如何提高模型进行异常检测的准确性，如不同网站之间KPI的动态复杂性（两个不同类型的网站，会因为一些相似的特征，干扰模型的判断）。
+    + **方向一**：目前一些常见的异常检测方法通过深度学习来实现，它们主要考虑异常或异常值的行为与正常数据不同，基于此引入了一些无监督学习方法[<sup>[1]</sup>](#refer-anchor-1)[<sup>[2]</sup>](#refer-anchor-2)[<sup>[3]</sup>](#refer-anchor-3)[<sup>[4]</sup>](#refer-anchor-4)[<sup>[12]</sup>](#refer-anchor-12)[<sup>[13]</sup>](#refer-anchor-13)[<sup>[14]</sup>](#refer-anchor-14)[<sup>[15]</sup>](#refer-anchor-15)[<sup>[18]</sup>](#refer-anchor-18)[<sup>[19]</sup>](#refer-anchor-19)[<sup>[20]</sup>](#refer-anchor-20)[<sup>[21]</sup>](#refer-anchor-21)[<sup>[22]</sup>](#refer-anchor-22)[<sup>[23]</sup>](#refer-anchor-23)[<sup>[24]</sup>](#refer-anchor-24)。其中包括基于距离的方法、基于聚类的方法、基于相似性的方法和基于分类的方法，这些方法存在局限性，因其未能考虑时间序列的时间依赖性[<sup>[27]</sup>](#refer-anchor-27)。学生须较为深入了解和总结前人的深度学习方法[<sup>[17]</sup>](#refer-anchor-17)[<sup>[25]</sup>](#refer-anchor-25)，在前人的基础上有所改进，进而复现一种深度学习模型，或提出一种加以改进的深度学习模型，对CDN KPI的时间序列数据进行表征和预处理[<sup>[26]</sup>](#refer-anchor-26)，提取特征和构建模型。并尝试解决下列问题：
+        - 1）如何提高模型异常检测结果的准确性，如不同网站之间KPI的动态复杂性（两个不同类型的网站，会因为一些相似的特征，干扰模型的判断）。
 
-        - 某个网站的CDN序列可能在不同时间表现不一样，对于模型来说，可能会识别为异常状态。那么如何通过深度学习方法解决这一问题？
+        - 2）某个网站的CDN序列可能在不同时间表现不一样，对于模型而言，可能会识别为异常状态，尝试通过深度学习方法解决这一问题。
     
-    + 跳出深度学习方法的圈子，深度学习方法可能存在一定的局限性，往往需要结合其他方法，如引入变分循环结构[<sup>[5]</sup>](#refer-anchor-5)，概率混合模型[<sup>[6]</sup>](#refer-anchor-6)[<sup>[7]</sup>](#refer-anchor-7)，分层时间记忆模型[<sup>[8]</sup>](#refer-anchor-8)[<sup>[9]</sup>](#refer-anchor-9)[<sup>[28]</sup>](#refer-anchor-28)等等[<sup>[10]</sup>](#refer-anchor-10)[<sup>[11]</sup>](#refer-anchor-11)，或结合各种方法的特征综合采用，或对方法某个方面进行改进，对相对复杂的KPI多变量时间序列进行建模并捕捉其中的不同的结构和动态特征，通过这些特征结合相应的方法训练出相应的模型。此外研究异常产生的原因，提高自身异常检测模型的可解释性[<sup>[29]</sup>](#refer-anchor-29)。
+    + **方向二**：深度学习方法可能存在一定的局限性，往往需要结合其他方法，如引入变分循环结构[<sup>[5]</sup>](#refer-anchor-5)，概率混合模型[<sup>[6]</sup>](#refer-anchor-6)[<sup>[7]</sup>](#refer-anchor-7)，分层时间记忆模型[<sup>[8]</sup>](#refer-anchor-8)[<sup>[9]</sup>](#refer-anchor-9)[<sup>[28]</sup>](#refer-anchor-28)等等[<sup>[10]</sup>](#refer-anchor-10)[<sup>[11]</sup>](#refer-anchor-11)，或结合各种方法的特点综合采用，或对方法某一个方面进行改进，对相对复杂的KPI多变量时间序列进行建模并捕捉其中的不同的结构和动态特征，通过这些特征结合相应的方法训练出相应的模型。此外研究异常产生的原因，提高自身异常检测模型的可解释性[<sup>[29]</sup>](#refer-anchor-29)。
 
 * 测试应用模型的平衡F分数，或通过其他方法估计模型的准确率[<sup>[16]</sup>](#refer-anchor-16)。
 
-* 可以引入多种代表性方法，比较不同方法之间好坏，指出关键点[<sup>[30]</sup>](#refer-anchor-30)。
+* 可以引入多种代表性方法，比较不同方法之间好坏，指出方法关键点，有模型相应的数学公式推导[<sup>[30]</sup>](#refer-anchor-30)。
 
-* 建议：例如，基于深度卷积网络和用于鲁棒异常的贝叶斯过滤，二者结合完成多元时间序列异常检测[<sup>[27]</sup>](#refer-anchor-27)。
+* 建议：深度学习方法和异常检测滤波器结合。例如，基于深度卷积网络和用于鲁棒异常的贝叶斯过滤，二者结合完成多元时间序列异常检测[<sup>[27]</sup>](#refer-anchor-27)。
 
 ----
 
