完成部分软硬件协同框架

--- a/高级系统结构/软硬件协同划分.md
+++ b/高级系统结构/软硬件协同划分.md
@@ -1,3 +1,37 @@
+## 软硬件设计(Hardware/Software co-design)
+
+* 什么是软硬件协同设计？
+* 传统方法是什么？
+* 软硬件系统设计相较于传统的设计有哪些优点？Classic H/S Design Process（为什么软硬件协同设计是未来的方式？软硬件协同设计的好处？）
+* 软硬件协同设计目前常应用在什么领域中？（软硬件协同设计的整合？*这里要结合我们药谈到的两个项目来谈谈或者从下列参考资料中单独举出两个例子*）
+* 软硬件协同设计的过程一般分为那些阶段？每个阶段具体做什么？仿真方法（*这里可以放到下一点，按照项目来说*）
+* 软硬件协同设计中软硬件的划分方法
+
+* 参考资料或文献：（结合里面谈到的H/S协同设计的框架和方法）
+
+    + https://baike.baidu.com/item/%E8%BD%AF%E7%A1%AC%E4%BB%B6%E5%8D%8F%E5%90%8C%E8%AE%BE%E8%AE%A1/7654377?fr=aladdin#2 （*百度百科不要照抄，改一改语句，不然重复率会很高，结合它上面的框架，可以借鉴图*）
+
+    + https://resources.pcb.cadence.com/blog/2019-what-is-hardware-software-co-design-and-how-can-it-benefit-you-or-your-business
+  
+    + https://www.sciencedirect.com/topics/engineering/hardware-software-codesign
+
+    + **结合这篇综述，补充回答上面的问题** [<sup>[7]</sup>](#refer-anchor-7)
+
+    + https://www.cs.ccu.edu.tw/~pahsiung/courses/soc/notes/SoC_Design_Flow_Tools_Codesign.pdf （*这个ppt中基本都提到上述问题，好好参考*）
+
+    + https://semiengineering.com/software-hardware-co-design-becomes-real/
+
+    + http://www.doc.ic.ac.uk/~wl/papers/05/sp05tw.pdf
+
+    + https://www.npd-solutions.com/codesign.html
+
+## 软硬件协同的具体项目
+
+* 深度学习下神经网络的软硬件协同优化设计
+    + RSNN：FPGAs上稀疏卷积神经网络的软硬件协同优化框架；
+    + 
+
+
 ## 文献综述
  
  * Hao[<sup>[1]</sup>](#refer-anchor-1)等讨论了在自制系统中应用MMMT（多模态多任务）技术的机会，讨论了应用MMMT技术所面临的挑战。作者在最后讨论了**MMMT模型和硬件协同设计的必要性和机会**，作者将其形式化地表述为一个优化问题，在可以通过协同设计提高解决方法质量并降低整体功耗和关键路径延迟。
@@ -37,6 +71,8 @@
     + 作者提出的这种方法适用于嵌入式系统设计，特别是对可靠性、鲁棒性、质量和安全性要求较高的汽车控制系统设计。
     + 本文中涉及到的$\mathbf{Renesas \ SH-2A}$微控制器模型是在来自$\mathbf{VaST \ Systems \ Technology}$的$\mathbf{CoMET^{TM}}$平台上开发的。
 
+* Jang等[<sup>[6]</sup>](#refer-anchor-6)
+
 ## Reference
 
 <div id="refer-anchor-1"></div>
@@ -58,3 +94,11 @@
 <div id="refer-anchor-5"></div>
 
 - [5] Ishikawa, Makoto, et al. "CPU model-based hardware/software co-design, co-simulation and analysis technology for real-time embedded control systems." 13th IEEE Real Time and Embedded Technology and Applications Symposium (RTAS'07). IEEE, 2007.
+
+<div id="refer-anchor-6"></div>
+
+- [6] Jang, Seojin, Wei Liu, and Yongbeom Cho. "Convolutional Neural Network Model Compression Method for Software—Hardware Co-Design." Information 13.10 (2022): 451.
+
+<div id="refer-anchor-7"></div>
+
+- [7] G. De Michell and R. K. Gupta, "Hardware/software co-design," in Proceedings of the IEEE, vol. 85, no. 3, pp. 349-365, March 1997, doi: 10.1109/5.558708.
