修改软硬件协同划分.md

--- a/高级系统结构/软硬件协同划分.md
+++ b/高级系统结构/软硬件协同划分.md
@@ -29,7 +29,14 @@
 
 * 深度学习下神经网络的软硬件协同优化设计
     + RSNN：FPGAs上稀疏卷积神经网络的软硬件协同优化框架；
-    + 
+    + 从模型到FPGA：高效神经网络加速的软硬件协同设计
+      + 我们需要讨论（*为什么软件需要硬件优化？作者在硬件上是怎么优化的？作者是怎样去验证这个软硬件协同效率的？硬件开发语言是什么？其软硬件优化的策略或过程是什么？有什么不同？*）
+
+
+* 嵌入式系统的软硬件协同优化设计（一个例子即可）
+    + 需要讲述传统嵌入式系统开发流程和嵌入式系统软硬件协同设计的区别；
+    + 如何仿真验证？
+    + 具体案例[<sup>[8]</sup>](#refer-anchor-8)[<sup>[9]</sup>](#refer-anchor-9)
 
 
 ## 文献综述
@@ -102,3 +109,11 @@
 <div id="refer-anchor-7"></div>
 
 - [7] G. De Michell and R. K. Gupta, "Hardware/software co-design," in Proceedings of the IEEE, vol. 85, no. 3, pp. 349-365, March 1997, doi: 10.1109/5.558708.
+
+<div id="refer-anchor-8"></div>
+
+- [8] 徐杭. 基于视觉的车载行人检测系统软硬件协同设计. MS thesis. 广西师范大学, 2018.
+
+<div id="refer-anchor-9"></div>
+
+- [9] 梁新宇. 基于 ZYNQ 的行人检测系统软硬件协同实现[D]. 大连海事大学, 2016.
