--- a/本科生论文题目设计/本科生论文题目设计.md
+++ b/本科生论文题目设计/本科生论文题目设计.md
@@ -1,5 +1,5 @@
 ### 题目
-**基于深度学习方法CDN网络中KPI异常检测**
+**基于机器学习方法CDN网络中KPI异常检测**
 
 ----
 
@@ -8,6 +8,8 @@
 
 * 多变量时间序列异常检测是数据挖掘领域中一个相当活跃的话题，广泛应用于各行各业，如有医疗保健、航空航天、工业生产和互联网ISP领域中。目前基于深度学习的多变量时间序列异常检测算法存在明显缺陷[<sup>[30]</sup>](#refer-anchor-30)。
 
+* 时间序列分类（Time Series Classification, TSC）在近年来一直都有被广泛研究[<sup>[31]</sup>](#refer-anchor-31)，一系列的TSC算法都被证明有很好的效果，但它们中主要的关注点都在单变量TSC（Univariate time series classification）。但是在现实生活中更常见的是多变量TSC分类问题（Multivariate time series classification, MTSC），即每个时间序列拥有多个维度，例如心电图（ECG），脑电图（EEG），系统监测等等。对于多变量时间序列分类问题，一种简单的方法是将单变量分类器集成到多变量维度上来做分类。
+
 ----
 
 ### 关键词
@@ -15,22 +17,31 @@
 + CDN异常检测
 + 多变量时间序列异常检测
 + MTS 多变量时间序列
-+ （方法名称）
++ 关键性能指标
++ KPI异常检测
++ （具体方法名称）
+
+----
+
+### 具体场景
+* 现如今随着互联网公司业务及服务规模的不断增长，传统网络运维管理手段在复杂实际场景下KPI异常检测任务中面临诸多挑战与困难。基于机器学习的CDN 网络KPI异常检测技术，作为一种网络故障早期预警及风险评估的重要手段，是当前网络风险控制的必然发展方向以及重要决策基础。这些KPI大致分为两种类型：服务KPI和机器KPI，运维人员通过监控各种各样的关键性能指标(KPI)来判断网络服务是否稳定。如下图中展示了一个KPI异常的例子——某互联网公司的网页访问量数据发生了异常，其中红色圆圈标示了KPI发生的异常。[<sup>[45]</sup>](#refer-anchor-45)[<sup>[46]</sup>](#refer-anchor-46)<div><div align=center><img src="picture/KPI异常的例子.png" alt="No Picture" style="zoom:70%"/><center><p>KPI异常的例子</p></center></div></div>
 
 ----
 
 ### 基本要求
-* 学生可在下列两个方向中选择
-    + **方向一**：目前一些常见的异常检测方法通过深度学习来实现，它们主要考虑异常或异常值的行为与正常数据不同，基于此引入了一些无监督学习方法[<sup>[1]</sup>](#refer-anchor-1)[<sup>[2]</sup>](#refer-anchor-2)[<sup>[3]</sup>](#refer-anchor-3)[<sup>[4]</sup>](#refer-anchor-4)[<sup>[12]</sup>](#refer-anchor-12)[<sup>[13]</sup>](#refer-anchor-13)[<sup>[14]</sup>](#refer-anchor-14)[<sup>[15]</sup>](#refer-anchor-15)[<sup>[18]</sup>](#refer-anchor-18)[<sup>[19]</sup>](#refer-anchor-19)[<sup>[20]</sup>](#refer-anchor-20)[<sup>[21]</sup>](#refer-anchor-21)[<sup>[22]</sup>](#refer-anchor-22)[<sup>[23]</sup>](#refer-anchor-23)[<sup>[24]</sup>](#refer-anchor-24)。其中包括基于距离的方法、基于聚类的方法、基于相似性的方法和基于分类的方法，这些方法存在局限性，因其未能考虑时间序列的时间依赖性[<sup>[27]</sup>](#refer-anchor-27)。学生须较为深入了解和总结前人的深度学习方法[<sup>[17]</sup>](#refer-anchor-17)[<sup>[25]</sup>](#refer-anchor-25)，在前人的基础上有所改进，进而复现一种深度学习模型，或提出一种加以改进的深度学习模型，对CDN KPI的时间序列数据进行表征和预处理[<sup>[26]</sup>](#refer-anchor-26)，提取特征和构建模型。并尝试解决下列问题：
+* 学生可在下列三个方向中选择或是结合下列三个方向
+    + **方向一**：目前一些常见的KPI异常检测方法通过机器学习来实现[<sup>[40]</sup>](#refer-anchor-40)，它们主要考虑异常或异常值的行为与正常数据不同，基于此引入了一些无监督学习方法[<sup>[1]</sup>](#refer-anchor-1)[<sup>[2]</sup>](#refer-anchor-2)[<sup>[3]</sup>](#refer-anchor-3)[<sup>[4]</sup>](#refer-anchor-4)[<sup>[12]</sup>](#refer-anchor-12)[<sup>[13]</sup>](#refer-anchor-13)[<sup>[14]</sup>](#refer-anchor-14)[<sup>[15]</sup>](#refer-anchor-15)[<sup>[18]</sup>](#refer-anchor-18)[<sup>[19]</sup>](#refer-anchor-19)[<sup>[20]</sup>](#refer-anchor-20)[<sup>[21]</sup>](#refer-anchor-21)[<sup>[22]</sup>](#refer-anchor-22)[<sup>[23]</sup>](#refer-anchor-23)[<sup>[24]</sup>](#refer-anchor-24)[<sup>[39]</sup>](#refer-anchor-39)。其中包括基于距离的方法、基于聚类的方法[<sup>[34]</sup>](#refer-anchor-34)、基于相似性的方法和基于分类的方法，这些方法存在局限性，因其未能考虑时间序列的时间依赖性[<sup>[27]</sup>](#refer-anchor-27)。抛开有监督和无监督的机器学习方法，基于分布迁移下的深度学习方法也是一种及其有效的异常检测方法[<sup>[37]</sup>](#refer-anchor-37)[<sup>[38]</sup>](#refer-anchor-38)，但目前的成熟的研究方法有限。学生须较为深入了解和总结前人的深度学习方法[<sup>[17]</sup>](#refer-anchor-17)[<sup>[25]</sup>](#refer-anchor-25)，在前人的基础上有所改进，进而复现一种深度学习模型，或提出一种加以改进的深度学习模型（如设计一种时间递归神经网络LSTM模型改进RNN模型的缺陷），对CDN KPI的时间序列数据进行表征和预处理[<sup>[26]</sup>](#refer-anchor-26)，提取特征和构建模型。并尝试解决下列问题：
         - 1）如何提高模型异常检测结果的准确性，如不同网站之间KPI的动态复杂性（两个不同类型的网站，会因为一些相似的特征，干扰模型的判断）。
 
         - 2）某个网站的CDN序列可能在不同时间表现不一样，对于模型而言，可能会识别为异常状态，尝试通过深度学习方法解决这一问题。
     
-    + **方向二**：深度学习方法可能存在一定的局限性，往往需要结合其他方法，如引入变分循环结构[<sup>[5]</sup>](#refer-anchor-5)，概率混合模型[<sup>[6]</sup>](#refer-anchor-6)[<sup>[7]</sup>](#refer-anchor-7)，分层时间记忆模型[<sup>[8]</sup>](#refer-anchor-8)[<sup>[9]</sup>](#refer-anchor-9)[<sup>[28]</sup>](#refer-anchor-28)等等[<sup>[10]</sup>](#refer-anchor-10)[<sup>[11]</sup>](#refer-anchor-11)，或结合各种方法的特点综合采用，或对方法某一个方面进行改进，对相对复杂的KPI多变量时间序列进行建模并捕捉其中的不同的结构和动态特征，通过这些特征结合相应的方法训练出相应的模型。此外研究异常产生的原因，提高自身异常检测模型的可解释性[<sup>[29]</sup>](#refer-anchor-29)。
+    + **方向二**：深度学习方法可能存在一定的局限性，往往需要结合其他方法，如引入变分循环结构[<sup>[5]</sup>](#refer-anchor-5)，概率混合模型[<sup>[6]</sup>](#refer-anchor-6)[<sup>[7]</sup>](#refer-anchor-7)，分层时间记忆模型[<sup>[8]</sup>](#refer-anchor-8)[<sup>[9]</sup>](#refer-anchor-9)[<sup>[28]</sup>](#refer-anchor-28)等等[<sup>[10]</sup>](#refer-anchor-10)[<sup>[11]</sup>](#refer-anchor-11)，或结合各种方法的特点综合采用，或对方法某一个方面进行改进，对相对复杂的KPI多变量时间序列进行建模并捕捉其中的不同的结构和动态特征[<sup>[41]</sup>](#refer-anchor-41)，通过这些特征结合相应的方法训练出相应的模型。此外研究异常产生的原因，提高自身异常检测模型的可解释性[<sup>[29]</sup>](#refer-anchor-29)。
+
+    + **方向三**：在CDN网络KPI异常检测中采用时间序列分解算法，选择一些经典的时间序列分解算法，得到残差，并结合一些异常判断准则求取残差上下界[<sup>[32]</sup>](#refer-anchor-32)。
 
 * 测试应用模型的平衡F分数，或通过其他方法估计模型的准确率[<sup>[16]</sup>](#refer-anchor-16)。
 
-* 可以引入多种代表性方法，比较不同方法之间好坏，指出方法关键点，有模型相应的数学公式推导[<sup>[30]</sup>](#refer-anchor-30)。
+* 可以引入多种代表性方法，比较不同方法之间好坏[<sup>[33]</sup>](#refer-anchor-33)，指出方法关键点，有模型相应的数学公式推导[<sup>[30]</sup>](#refer-anchor-30)。
 
 * 建议：深度学习方法和异常检测滤波器结合。例如，基于深度卷积网络和用于鲁棒异常的贝叶斯过滤，二者结合完成多元时间序列异常检测[<sup>[27]</sup>](#refer-anchor-27)。
 
@@ -39,6 +50,12 @@
 ### 其他
 
 * 数据集合来源[<sup>[29]</sup>](#refer-anchor-29)：在该文中介绍了用于异常检测的开放访问时间序列数据集。
+* CDN-X-ALL网络指标数据集[<sup>[35]</sup>](#refer-anchor-35)
+* SDFVAE[<sup>[3]</sup>](#refer-anchor-3)中训练所用的数据集[<sup>[36]</sup>](#refer-anchor-36)
+* 微软提供的一个KPI异常检测数据集[<sup>[42]</sup>](#refer-anchor-42)
+* 第一届AIops异常检测项目的数据集[<sup>[43]</sup>](#refer-anchor-43)[<sup>[44]</sup>](#refer-anchor-44)
+* CCF国际AIOps挑战赛数据集[<sup>[48]</sup>](#refer-anchor-48)
+* 其他数据集和资料汇总[<sup>[49]</sup>](#refer-anchor-49)
 
 ----
 
@@ -164,3 +181,79 @@
 <div id="refer-anchor-30"></div>
 
 - [30] Wu, Hu-Sheng. "A survey of research on anomaly detection for time series." 2016 13th International Computer Conference on Wavelet Active Media Technology and Information Processing (ICCWAMTIP). IEEE, 2016.
+
+<div id="refer-anchor-31"></div>
+
+- [31] Ruiz, Alejandro Pasos, et al. "The great multivariate time series classification bake off: a review and experimental evaluation of recent algorithmic advances." Data Mining and Knowledge Discovery 35.2 (2021): 401-449.
+
+<div id="refer-anchor-32"></div>
+
+- [32] [网络KPI异常检测之时序分解算法](https://www.cnblogs.com/huaweiyun/p/13093365.html)
+
+<div id="refer-anchor-33"></div>
+
+- [33] 陈德.多变量时间序列数据的异常检测方法研究.2020.武汉理工大学,MA thesis.
+
+<div id="refer-anchor-34"></div>
+
+- [34] 丁望祥.多变量时间序列数据聚类和异常检测算法研究.2020.南京大学,MA thesis.
+
+<div id="refer-anchor-35"></div>
+
+- [35] [Fed4Fire/CDN-X-ALL network metrics dataset for time series analysis in Media content delivery for 4G/5G networks](https://zenodo.org/record/3459164#.Y3ZWEHZBxD8)
+
+<div id="refer-anchor-36"></div>
+
+- [36] [dlagul/SDFVAE](https://github.com/dlagul/SDFVAE/tree/main/data_preprocess/data)
+
+<div id="refer-anchor-37"></div>
+
+- [37] Zhang, Shenglin, et al. "Efficient KPI Anomaly Detection Through Transfer Learning for Large-Scale Web Services." IEEE Journal on Selected Areas in Communications (2022).
+
+<div id="refer-anchor-38"></div>
+
+- [38] 钱骥.基于机器学习的KPI异常检测技术研究.2020.国防科技大学,MA thesis.
+
+<div id="refer-anchor-39"></div>
+
+- [39] 张圣林, et al."基于深度学习的无监督KPI异常检测." 数据与计算发展前沿 2.03(2020):87-100.
+
+<div id="refer-anchor-40"></div>
+
+- [40] 孙永谦, et al."KPI异常检测方法评估." 数据与计算发展前沿 4.03(2022):46-65.
+
+<div id="refer-anchor-41"></div>
+
+- [41] [5.4.1.1 核心网KPI异常检测数据集及特征介绍](https://www.bilibili.com/video/BV14Y4y1z7Zm/?spm_id_from=333.337.search-card.all.click&vd_source=9c46ec3fc5b4dbcb89ae602025bd6838)
+
+<div id="refer-anchor-42"></div>
+
+- [42] [KPI异常检测（一）——Time-Series Anomaly Detection Service at Microsoft](https://zhuanlan.zhihu.com/p/464943285)
+
+<div id="refer-anchor-43"></div>
+
+- [43] [AIops Anomaly Detection Dataset](https://download.csdn.net/download/qj8380078/10475044?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-download-2%7Edefault%7ECTRLIST%7EPaid-1-10475044-blog-118072380.pc_relevant_recovery_v2&depth_1-utm_source=distribute.pc_relevant.none-task-download-2%7Edefault%7ECTRLIST%7EPaid-1-10475044-blog-118072380.pc_relevant_recovery_v2&utm_relevant_index=2)
+
+<div id="refer-anchor-44"></div>
+
+- [44] [异常检测常用的一些数据集](https://download.csdn.net/download/weixin_39940512/14008876?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-download-2%7Edefault%7ECTRLIST%7EPaid-1-14008876-blog-118072380.pc_relevant_recovery_v2&depth_1-utm_source=distribute.pc_relevant_t0.none-task-download-2%7Edefault%7ECTRLIST%7EPaid-1-14008876-blog-118072380.pc_relevant_recovery_v2&utm_relevant_index=1)
+
+<div id="refer-anchor-45"></div>
+
+- [45] [KPI异常检测竞赛笔记](https://zhuanlan.zhihu.com/p/41201506)
+
+<div id="refer-anchor-46"></div>
+
+- [46] [网络AI算法之KPI异常检测算法](https://www.bilibili.com/video/av795781853/?vd_source=9c46ec3fc5b4dbcb89ae602025bd6838)
+
+<div id="refer-anchor-47"></div>
+
+- [47] [微软亚研院的AIOps底层算法： KPI快速聚类](http://www.yunweipai.com/23505.html)
+
+<div id="refer-anchor-48"></div>
+
+- [48] [AIOps Challenge 国际智能运维挑战赛](https://aiops-challenge.com/)
+
+<div id="refer-anchor-49"></div>
+
+- [49] [《异常检测——从经典算法到深度学习》9 异常检测资料汇总（持续更新&抛砖引玉）](https://blog.csdn.net/smileyan9/article/details/113728611)
