初步完成本科生论文题目设计

--- a/本科生论文题目设计/本科生论文题目设计(1).md
+++ b/本科生论文题目设计/本科生论文题目设计(1).md
@@ -55,8 +55,8 @@
 * 微软提供的一个KPI异常检测数据集[<sup>[42]</sup>](#refer-anchor-42)
 * 第一届AIops异常检测项目的数据集[<sup>[43]</sup>](#refer-anchor-43)[<sup>[44]</sup>](#refer-anchor-44)
 * CCF国际AIOps挑战赛数据集[<sup>[48]</sup>](#refer-anchor-48)
-* 其他数据集和资料汇总[<sup>[49]</sup>](#refer-anchor-49)
-
+* KPI异常检测其他数据集和资料汇总[<sup>[49]</sup>](#refer-anchor-49)
+* 多变量时间序列异常检测数据集整理[<sup>[50]</sup>](#refer-anchor-50)
 ----
 
 ## 参考文献：
@@ -152,7 +152,7 @@
 
 <div id="refer-anchor-23"></div>
 
-- [23]Pereira, Joao, and Margarida Silveira. "Unsupervised anomaly detection in energy time series data using variational recurrent autoencoders with attention." 2018 17th IEEE international conference on machine learning and applications (ICMLA). IEEE, 2018.
+- [23] Pereira, Joao, and Margarida Silveira. "Unsupervised anomaly detection in energy time series data using variational recurrent autoencoders with attention." 2018 17th IEEE international conference on machine learning and applications (ICMLA). IEEE, 2018.
 
 <div id="refer-anchor-24"></div>
 
@@ -257,3 +257,7 @@
 <div id="refer-anchor-49"></div>
 
 - [49] [《异常检测——从经典算法到深度学习》9 异常检测资料汇总（持续更新&抛砖引玉）](https://blog.csdn.net/smileyan9/article/details/113728611)
+
+<div id="refer-anchor-50"></div>
+
+- [50] [【时间序列】多变量时间序列异常检测数据集整理及标准化处理代码合集](https://blog.csdn.net/qq_33431368/article/details/125925577)
