--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -693,6 +693,14 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\3PZQ5DLS\\Kolken 等 - 2023 - Effects of SMR Neurofeedback on Cognitive Function.pdf}
 }
 
+@inproceedings{kruse_learning_2017,
+  title = {Learning to Push the Limits of Efficient Fft-Based Image Deconvolution},
+  author = {Kruse, Jakob and Rother, Carsten and Schmidt, Uwe},
+  date = {2017},
+  pages = {4586--4594},
+  eventtitle = {Proceedings of the {{IEEE International Conference}} on {{Computer Vision}}}
+}
+
 @inproceedings{li_gan_2020,
   title = {Gan Compression: {{Efficient}} Architectures for Interactive Conditional Gans},
   booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition},
@@ -812,6 +820,17 @@
   abstract = {Neurofeedback, an operant conditioning neuromodulation technique, uses information from brain activities in real-time via brain–computer interface (BCI) technology. This technique has been utilized to enhance the cognitive abilities, including working memory performance, of human beings. The aims of this study are to investigate how alpha neurofeedback can improve working memory performance in healthy participants and to explore the underlying neural mechanisms in a working memory task before and after neurofeedback. Thirty-six participants divided into the NFT group and the control group participated in this study. This study was not blinded, and both the participants and the researcher were aware of their group assignments. Increasing power in the alpha EEG band was used as a neurofeedback in the eyes-open condition only in the NFT group. The data were collected before and after neurofeedback while they were performing the N-back memory task (N = 1 and N = 2). Both groups showed improvement in their working memory performance. There was an enhancement in the power of their frontal alpha and beta activities with increased working memory load (i.e., 2-back). The experimental group showed improvements in their functional connections between different brain regions at the theta level. This effect was absent in the control group. Furthermore, brain hemispheric lateralization was found during the N-back task, and there were more intra-hemisphere connections than inter-hemisphere connections of the brain. These results suggest that healthy participants can benefit from neurofeedback and from having their brain networks changed after the training.},
   langid = {english},
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\YZ2MS3XJ\\Nawaz 等 - 2023 - Exploring the Effects of EEG-Based Alpha Neurofeed.pdf}
+}
+
+@inproceedings{NEURIPS2018_0aa1883c,
+  title = {Deep Non-Blind Deconvolution via Generalized Low-Rank Approximation},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Ren, Wenqi and Zhang, Jiawei and Ma, Lin and Pan, Jinshan and Cao, Xiaochun and Zuo, Wangmeng and Liu, Wei and Yang, Ming-Hsuan},
+  editor = {Bengio, S. and Wallach, H. and Larochelle, H. and Grauman, K. and Cesa-Bianchi, N. and Garnett, R.},
+  date = {2018},
+  volume = {31},
+  publisher = {{Curran Associates, Inc.}},
+  url = {https://proceedings.neurips.cc/paper/2018/file/0aa1883c6411f7873cb83dacb17b0afc-Paper.pdf}
 }
 
 @article{noauthor__2021,
