--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -572,6 +572,20 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\WYKM8BKK\\Davelaar - 2018 - Mechanisms of Neurofeedback A Computation-theoret.pdf}
 }
 
+@article{DBLP:journals/corr/abs-1709-03749,
+  title = {Deep Mean-Shift Priors for Image Restoration},
+  author = {Bigdeli, Siavash Arjomand and Jin, Meiguang and Favaro, Paolo and Zwicker, Matthias},
+  date = {2017},
+  journaltitle = {CoRR},
+  volume = {abs/1709.03749},
+  eprint = {1709.03749},
+  eprinttype = {arxiv},
+  url = {http://arxiv.org/abs/1709.03749},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1709-03749.bib},
+  timestamp = {Mon, 13 Aug 2018 16:46:54 +0200}
+}
+
 @article{duan_efficient_2019,
   title = {Efficient Image Encryption and Compression Based on a {{VAE}} Generative Model},
   author = {Duan, Xintao and Liu, Jingjing and Zhang, En},
@@ -666,6 +680,14 @@
   date = {2022-07}
 }
 
+@inproceedings{jin_noise-blind_2017,
+  title = {Noise-Blind Image Deblurring},
+  author = {Jin, Meiguang and Roth, Stefan and Favaro, Paolo},
+  date = {2017},
+  pages = {3510--3518},
+  eventtitle = {Proceedings of the {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}}
+}
+
 @unpublished{kingma_auto-encoding_2013,
   title = {Auto-Encoding Variational Bayes},
   author = {Kingma, Diederik P. and Welling, Max},
@@ -747,6 +769,15 @@
   author = {Liu, Haojie and Chen, Tong and Shen, Qiu and Ma, Zhan},
   date = {2019},
   pages = {0}
+}
+
+@article{lyu_advances_2019,
+  title = {Advances in Neural Information Processing Systems},
+  author = {Lyu, He and Sha, Ningyu and Qin, Shuyang and Yan, Ming and Xie, Yuying and Wang, Rongrong},
+  date = {2019},
+  journaltitle = {Advances in neural information processing systems},
+  shortjournal = {Advances in neural information processing systems},
+  volume = {32}
 }
 
 @inproceedings{marcellin_overview_2000,
@@ -1063,6 +1094,30 @@
   pages = {2528--2535},
   publisher = {{IEEE}},
   isbn = {1-4244-6985-6}
+}
+
+@inproceedings{zhang_deep_2020,
+  title = {Deep Unfolding Network for Image Super-Resolution},
+  author = {Zhang, Kai and Gool, Luc Van and Timofte, Radu},
+  date = {2020},
+  pages = {3217--3226},
+  eventtitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition}
+}
+
+@inproceedings{zhang_learning_2017,
+  title = {Learning Deep {{CNN}} Denoiser Prior for Image Restoration},
+  author = {Zhang, Kai and Zuo, Wangmeng and Gu, Shuhang and Zhang, Lei},
+  date = {2017},
+  pages = {3929--3938},
+  eventtitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition}
+}
+
+@inproceedings{zhang_learning_2017-1,
+  title = {Learning Deep {{CNN}} Denoiser Prior for Image Restoration},
+  author = {Zhang, Kai and Zuo, Wangmeng and Gu, Shuhang and Zhang, Lei},
+  date = {2017},
+  pages = {3929--3938},
+  eventtitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition}
 }
 
 @article{zhang_remote_2022,
