修改引用文献

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -922,6 +922,16 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\9YJNQPEK\\Setyaningsih 和 Harjoko - 2017 - Survey of hybrid image compression techniques.pdf}
 }
 
+@article{shen2020exploiting,
+  title = {Exploiting Semantics for Face Image Deblurring},
+  author = {Shen, Ziyi and Lai, Wei-Sheng and Xu, Tingfa and Kautz, Jan and Yang, Ming-Hsuan},
+  date = {2020},
+  journaltitle = {International Journal of Computer Vision},
+  volume = {128},
+  pages = {1829--1846},
+  publisher = {{Springer}}
+}
+
 @inproceedings{shin_expanded_2022,
   title = {Expanded {{Adaptive Scaling Normalization}} for {{End}} to {{End Image Compression}}},
   booktitle = {Computer {{Vision}}–{{ECCV}} 2022: 17th {{European Conference}}, {{Tel Aviv}}, {{Israel}}, {{October}} 23–27, 2022, {{Proceedings}}, {{Part XVII}}},
