更新文献库

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -508,6 +508,15 @@
   keywords = {electronic engineering,FOS: Electrical engineering,Image and Video Processing (eess.IV),information engineering}
 }
 
+@inproceedings{chen2022simple,
+  title = {Simple Baselines for Image Restoration},
+  booktitle = {Computer {{Vision}}–{{ECCV}} 2022: 17th European Conference, Tel Aviv, Israel, October 23–27, 2022, Proceedings, Part {{VII}}},
+  author = {Chen, Liangyu and Chu, Xiaojie and Zhang, Xiangyu and Sun, Jian},
+  date = {2022},
+  pages = {17--33},
+  organization = {{Springer}}
+}
+
 @inproceedings{cho_fast_2009,
   title = {Fast {{Motion Deblurring}}},
   booktitle = {Acm {{Siggraph Asia}}},
@@ -739,11 +748,11 @@
   pages = {5284--5294}
 }
 
-@unpublished{li_survey_2022,
+@article{li_survey_2022,
   title = {A {{Survey}} on {{Image Deblurring}}},
   author = {Li, ChuMiao},
   date = {2022},
-  shortjournal = {arXiv preprint arXiv:2202.07456},
+  journaltitle = {arXiv preprint arXiv:2202.07456},
   eprint = {2202.07456},
   eprinttype = {arxiv}
 }
