--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -931,6 +931,14 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\9YJNQPEK\\Setyaningsih 和 Harjoko - 2017 - Survey of hybrid image compression techniques.pdf}
 }
 
+@inproceedings{shen2018deep,
+  title = {Deep Semantic Face Deblurring},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Shen, Ziyi and Lai, Wei-Sheng and Xu, Tingfa and Kautz, Jan and Yang, Ming-Hsuan},
+  date = {2018},
+  pages = {8260--8269}
+}
+
 @article{shen2020exploiting,
   title = {Exploiting Semantics for Face Image Deblurring},
   author = {Shen, Ziyi and Lai, Wei-Sheng and Xu, Tingfa and Kautz, Jan and Yang, Ming-Hsuan},
