更改文献引用

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -983,6 +983,14 @@
   isbn = {0-521-59914-8}
 }
 
+@inproceedings{tao2018scale,
+  title = {Scale-Recurrent Network for Deep Image Deblurring},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Tao, Xin and Gao, Hongyun and Shen, Xiaoyong and Wang, Jue and Jia, Jiaya},
+  date = {2018},
+  pages = {8174--8182}
+}
+
 @unpublished{theis_lossy_2017,
   title = {Lossy Image Compression with Compressive Autoencoders},
   author = {Theis, Lucas and Shi, Wenzhe and Cunningham, Andrew and Huszár, Ferenc},
