更新文献库

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -683,6 +683,14 @@
   pages = {2563--2566}
 }
 
+@inproceedings{hyun2017online,
+  title = {Online Video Deblurring via Dynamic Temporal Blending Network},
+  booktitle = {Proceedings of the {{IEEE}} International Conference on Computer Vision},
+  author = {Hyun Kim, Tae and Mu Lee, Kyoung and Scholkopf, Bernhard and Hirsch, Michael},
+  date = {2017},
+  pages = {4038--4047}
+}
+
 @misc{isoiec_jtc_1sc29wg1_n100279_icq_description_2022,
   title = {"{{Description}} of the {{JPEG AI Verification Model}} under {{Consideration}} and Associated Software Integration Procedure", 96th {{Meeting}}, {{Online}}.},
   author = {ISO/IEC JTC 1/SC29/WG1 N100279, ICQ},
@@ -844,6 +852,22 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\U7NVLTQ6\\Nah_Deep_Multi-Scale_Convolutional_CVPR_2017_paper.pdf}
 }
 
+@inproceedings{nah2019recurrent,
+  title = {Recurrent Neural Networks with Intra-Frame Iterations for Video Deblurring},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition},
+  author = {Nah, Seungjun and Son, Sanghyun and Lee, Kyoung Mu},
+  date = {2019},
+  pages = {8102--8111}
+}
+
+@inproceedings{nah2019recurrent,
+  title = {Recurrent Neural Networks with Intra-Frame Iterations for Video Deblurring},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition},
+  author = {Nah, Seungjun and Son, Sanghyun and Lee, Kyoung Mu},
+  date = {2019},
+  pages = {8102--8111}
+}
+
 @article{nawaz_exploring_2023,
   title = {Exploring the {{Effects}} of {{EEG-Based Alpha Neurofeedback}} on {{Working Memory Capacity}} in {{Healthy Participants}}},
   author = {Nawaz, Rab and Wood, Guilherme and Nisar, Humaira and Yap, Vooi Voon},
@@ -975,12 +999,28 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\XXZLN6HI\\Shourie 等 - 2018 - Fuzzy adaptive neurofeedback training An efficien.pdf}
 }
 
+@inproceedings{sim2019deep,
+  title = {A Deep Motion Deblurring Network Based on Per-Pixel Adaptive Kernels with Residual down-up and up-down Modules},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition Workshops},
+  author = {Sim, Hyeonjun and Kim, Munchurl},
+  date = {2019},
+  pages = {0--0}
+}
+
 @book{starck_image_1998,
   title = {Image Processing and Data Analysis: The Multiscale Approach},
   author = {Starck, Jean-Luc and Murtagh, Fionn D. and Bijaoui, Albert},
   date = {1998},
   publisher = {{Cambridge University Press}},
   isbn = {0-521-59914-8}
+}
+
+@inproceedings{su2017deep,
+  title = {Deep Video Deblurring for Hand-Held Cameras},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Su, Shuochen and Delbracio, Mauricio and Wang, Jue and Sapiro, Guillermo and Heidrich, Wolfgang and Wang, Oliver},
+  date = {2017},
+  pages = {1279--1288}
 }
 
 @inproceedings{tao2018scale,
@@ -1054,6 +1094,22 @@
   number = {4},
   pages = {600--612},
   publisher = {{IEEE}}
+}
+
+@inproceedings{wang2019edvr,
+  title = {Edvr: {{Video}} Restoration with Enhanced Deformable Convolutional Networks},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition Workshops},
+  author = {Wang, Xintao and Chan, Kelvin CK and Yu, Ke and Dong, Chao and Change Loy, Chen},
+  date = {2019},
+  pages = {0--0}
+}
+
+@inproceedings{wang2019edvr,
+  title = {Edvr: {{Video}} Restoration with Enhanced Deformable Convolutional Networks},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition Workshops},
+  author = {Wang, Xintao and Chan, Kelvin CK and Yu, Ke and Dong, Chao and Change Loy, Chen},
+  date = {2019},
+  pages = {0--0}
 }
 
 @article{xu_deep_2014,
@@ -1163,4 +1219,20 @@
   volume = {19},
   pages = {1--5},
   doi = {10.1109/LGRS.2021.3068271}
+}
+
+@inproceedings{zhou2019spatio,
+  title = {Spatio-Temporal Filter Adaptive Network for Video Deblurring},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision},
+  author = {Zhou, Shangchen and Zhang, Jiawei and Pan, Jinshan and Xie, Haozhe and Zuo, Wangmeng and Ren, Jimmy},
+  date = {2019},
+  pages = {2482--2491}
+}
+
+@inproceedings{zhou2019spatio,
+  title = {Spatio-Temporal Filter Adaptive Network for Video Deblurring},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision},
+  author = {Zhou, Shangchen and Zhang, Jiawei and Pan, Jinshan and Xie, Haozhe and Zuo, Wangmeng and Ren, Jimmy},
+  date = {2019},
+  pages = {2482--2491}
 }
